# kokoro-voice-designer

./: .gitignore  README.md  app.py  pyproject.toml
core/: __init__.py  discovery.py  fitness_scorer.py  speech_generator.py  voice_analyzer.py
